demo/src/index.css
body {
  background-color: white;
  margin: 0;
  padding-top: 55svh;
  box-sizing: border-box;
  height: calc(100lvh + 3000px);
  font-family: sans-serif;

  &::after {
    content: 'Loading...';
    background-color: white;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    position: fixed;
    display: flex;
    align-items: center;
    justify-content: center;
    text-transform: uppercase;
    letter-spacing: .1em;
    font-size: 10px;
    font-weight: 500;
    font-weight: 500;
    color: white;
    z-index: 1000;
    opacity: 0;
    pointer-events: none;
    color: transparent;
    transition: opacity .4s .05s, color .4s;
  }
}

canvas {
  width: 100%;
  max-width: 800px;
  top: 50%;
  left: 50%;
  position: fixed;
  z-index: 1;
  transform: translate(-50%, -50%);
}

p {
  color: black;
  font-size: min(25vw, 200px);
  text-transform: uppercase;
  font-weight: bold;
  text-align: center;
  margin: 0;
  position: relative;
}

span {
  background-color: white;
  border: 1px solid #0003;
  border-radius: 5px;
  bottom: 10px;
  left: 50%;
  padding: 3px 5px  3px calc(5px + 0.1em);
  z-index: 2;
  position: fixed;
  transform: translateX(-50%);
  font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
  letter-spacing: 0.1em;
  color: black;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  font-variant-numeric: tabular-nums;
}

.loading {
  height: auto;

  &::after {
    opacity: 1;
    color: black;
    transition: none;
    pointer-events: auto;
  }
}

